# create_brandon_project

./: .brandon_experiment.sh.swp  .create_brandon.py.swp  .gitignore  .readthedocs.yaml  README.md  brandon_experiment.sh  readthedocs.yaml  setup.cfg
20220207_125113_triton_3_ist__3_teste/: test.ipynb
20220208_144444_triton4_ist3_test/: 20220208_144444_triton4_ist3_test.ipynb
20220208_144927_triton_4_ist3_test/: 20220208_144927_triton_4_ist3_test.ipynb
20220208_151455_triton4_ist3_test/: 20220208_151455_triton4_ist3_test.ipynb
20220208_151625___test/: 20220208_151625___test.ipynb
20220221_165101_triton_1_carbon_nano_floarian/: 20220221_165101_triton_1_carbon_nano_floarian.ipynb
docs/: conf.py  create_brandon.rst  create_brandon.scripts.rst  index.rst  modules.rst  requirements.txt
src/create_brandon/: create_brandon.py
src/create_brandon/scripts/: helper_functions.py
tests/: test_create_brandon.py
